# lesson_51

./: .env.example  .gitignore  INSTALL.md  README.md  app_settings.json  build.bat  build.py  build_config.py  buildozer.spec  chat_cache.db  flutter.bat  pubspec.yaml  pyproject.toml  requirements.txt  requirements_android.txt  requirements_win.txt
exports/: chat_history_20241222_000016.json  chat_history_20241222_001547.json  chat_history_20241227_231210.json
src/: main.py  pubspec.yaml
src/api/: openrouter.py
src/flutter/: pyproject.toml
src/ui/: components.py  styles.py
src/utils/: __init__.py  analytics.py  cache.py  logger.py  monitor.py
test/: __init__.py  test_app.py
